resized the modal to about 400px and removed the scroll bar that appear when modal is visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,18 @@
 @media (min-width: 768px){
 
 .modal-dialog {
-    width: 500px !important;
+    width: 400px !important;
+}
+
+.modal-open .modal {
+   
+    overflow-y: hidden;
+}
+
+
+.log-option {
+    margin: 25px 0 5px;
+    
 }
 
 }
